fix: set min-width for form and stretched elements

--- a/src/layouts/FormLayout.css
+++ b/src/layouts/FormLayout.css
@@ -19,6 +19,7 @@
   margin: auto;
   width: -moz-min-content;
   width: min-content;
+  min-width: 300px;
 }
 .form__container {
   display: flex;
